--- a/plugin.xml
+++ b/plugin.xml
@@ -20,25 +20,19 @@ xmlns:android="http://schemas.android.com/apk/res/android"
   <platform name="android">
 	
 	<config-file target="AndroidManifest.xml" parent="/manifest">
-		<uses-feature android:name="android.software.leanback" android:required="false" />
+		<uses-feature android:name="android.software.leanback" android:required="true" />
 		<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
-		<uses-feature android:name="android.hardware.camera" android:required="false" />
-		<uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
 		<uses-feature android:name="android.hardware.microphone" android:required="false" />
 		<uses-feature android:name="android.hardware.wifi" android:required="false" />
 		<uses-feature android:name="android.hardware.bluetooth" android:required="false" />
-		<uses-feature android:name="android.hardware.location" android:required="false" />
-		<uses-feature android:name="android.hardware.location.gps" android:required="false" />
-		<uses-feature android:name="android.hardware.location.network" android:required="false" />
-		<uses-feature android:name="android.hardware.telephony" android:required="false" />
+		
 		<!-- <uses-feature android:name="android.hardware.gamepad" android:required="false"/> -->
     </config-file>
 
 	<config-file target="AndroidManifest.xml" parent="/manifest/application/activity/intent-filter">
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.LAUNCHER" />
-        <category android:name="tv.ouya.intent.category.GAME" />
-		<category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+       <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
     </config-file>
 	
 	<hook type="after_prepare" src="isgame.js" />
